--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -835,3 +835,26 @@ footer {
         cursor: pointer;
     }
 }
+
+#comments{
+    ul{
+        padding-left: 0;
+    }
+
+    li.comment{
+        list-style-type: none;
+        min-height: 2em;
+
+        .comment-user{
+            display: inline-block;
+            font-weight: 500;
+            text-decoration: underline;
+            min-width: 150px;
+            font-size: 1.1em;
+        }
+        .comment-text{
+
+        }
+    }
+
+}
