--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -436,24 +436,8 @@ header {
     width: 100%;
 }
 
-#player {
-    margin-top: 2em;
-    display: inline-block;
-    height: 64px;
-    border-top: 1px solid black;
-    width: 100%;
-    padding-top: .5em;
-
-
-    h1 {
-        display: inline-block;
-        font-family: Roboto;
-        font-weight: 700;
-        text-transform: uppercase;
-        font-size: 1.3em;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
+#bottommargin{
+    margin-bottom: 3em;
 }
 
 #fullscreenplayer {
