Fixed playback (removing the "player" div was not a good idea)

--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -109,6 +109,7 @@
 </div>
 
 <div id="bottommargin"></div>
+<div id="player" style="display: none"></div>
 
 <div id="fullscreenplayer" style="display: none">
     <div id="darkoverlay">
