--- a/UI-MVC/Views/History/View.cshtml
+++ b/UI-MVC/Views/History/View.cshtml
@@ -84,6 +84,7 @@
 </div>
 
 <div id="bottommargin"></div>
+<div id="player" style="display: none"></div>
 
 <div id="fullscreenplayer" style="display: none">
     <div id="darkoverlay">
