--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -758,6 +758,20 @@ header {
         background: #222;
     }
 }
+.btn-chat{
+    display: inline-block;
+    border: 2px solid #fff;
+    background: transparent;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.3em;
+    padding: .2em 1em;
+    text-transform: lowercase;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: 100;
+    margin-right: .3em;
+}
 
 .btn:disabled {
     cursor: not-allowed;
