misschien een databasefix #niethopen

--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -225,8 +225,6 @@
             if (data != null) {
                 cue_and_play(data, startSeconds+2);
             }
-
-
         }
         play.client.joinGroup = function() {
 
@@ -588,7 +586,7 @@
         });
 
         window.onunload = window.onbeforeunload = (function() {
-            assignPlaylistMaster(@null);
+            //assignPlaylistMaster(@null);
         });
 
 
