--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -2,6 +2,9 @@
 @using BB.UI.Web.MVC.Models
 @using BB.BL.Domain.Users
 @using BB.BL.Domain.Organisations
+@using Google.GData.Extensions;
+@using Google.GData.YouTube;
+@using System.Net;
 @using PagedList.Mvc
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @model OrganisationViewWithPlaylist
@@ -27,18 +30,18 @@
         <h1>@Model.Name</h1>
         @if (ViewBag.Following.Equals("None"))
         {
-            <a href='javascript:Follow()' class="btn" style="margin-top: 1em;">
-                <i class="material-icons">follow_organisation</i> Follow
+            <a href='javascript:Follow()' class="btn">
+                <i class="material-icons">playlist_add</i> Follow
             </a>
         } else if(ViewBag.Following.Equals("Following")) {
-            <a href='javascript:UnFollow()' class="btn" style="margin-top: 1em;">
-                <i class="material-icons">follow_organisation</i> Un follow
+            <a href='javascript:UnFollow()' class="btn" style="width: 200px;">
+                <i class="material-icons">playlist_add</i> Un follow
             </a>
         }
         else if (ViewBag.Following.Equals("Co-Organiser"))
         {
-            <a href='javascript:Leave()' class="btn" style="margin-top: 1em;">
-                <i class="material-icons">follow_organisation</i> Leave organisation
+            <a href='javascript:Leave()' class="btn" style="width: 200px;">
+                <i class="material-icons">playlist_add</i> Leave organisation
             </a>
         }else if (ViewBag.Following.Equals("Organiser"))
         {
@@ -153,13 +156,20 @@
             <i class="material-icons">playlist_add</i> add playlist
         </a>
     </div>
-}
-else
-{
-    foreach (User user in Model.CoOrganiser)
-    {
-        if (user.Email.Equals(User.Identity.Name))
-        {
+
+    <div class="add-playlist">
+        <a href="#addPlaylistModal" class="btn btn-right">
+            <i class="material-icons">playlist_add</i> import from youtube
+        </a>
+    </div>
+
+                    }
+                    else
+                    {
+                        foreach (User user in Model.CoOrganiser)
+                        {
+                            if (user.Email.Equals(User.Identity.Name))
+                            {
             <div class="add-playlist">
                 <a href='javascript:AddPlaylist()' class="btn btn-right" >
                     <i class="material-icons">playlist_add</i> add playlist
@@ -170,7 +180,9 @@ else
     }
 }
 
-    @section scripts{
+
+@section scripts{
+
         <script>
             function Leave() {
                 $.ajax({
