Organisation image fix

--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -647,12 +647,9 @@ footer {
     min-width: 150px;
     font-size: 1.1em; }
 
-#sharedialog {
-  display: block; }
-  #sharedialog #facebook img {
-    display: initial !important; }
-  #sharedialog #twitter img {
-    display: initial !important; }
-  #sharedialog #gplus img {
-    display: initial !important; }
+.organisation-full-banner {
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  background-position: center center; }
 
