--- a/UI-MVC/Views/Home/Portal.cshtml
+++ b/UI-MVC/Views/Home/Portal.cshtml
@@ -68,7 +68,7 @@
                     }
                 }
                 <a href="@Url.Action("Details", "Organisations", new {id = organisation.Id})">
-                    <div style="background-image: url(@organisationSource)" class="organisation-banner">&nbsp;</div>
+                    <div style="background-image: url('@organisationSource')" class="organisation-banner">&nbsp;</div>
 
                     <h3>@organisation.Name</h3>
                 </a>
